package ca.mcmaster.se2aa4.island.team107.map;

public interface Map {
    
    void addPOI(POI poi);

    String getEmergencySiteID();

    String getClosestCreekID();
}
